LE POISSONNNNN STEVEEEE

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     
   <img  src="fotos/foto header.png" alt=""  class="foto-klein">
   <img  src="fotos/f2.png" alt="" class="foto-groot">
-  <img src="fotos/f3.png" alt="" class="foto-middel" >
+  <img src="fotos/f3.jpg" alt="" class="foto-middel" >
 </div>
 
 
