--- a/productenlijst.html
+++ b/productenlijst.html
@@ -6,6 +6,7 @@
   <title>Document</title>
   <link rel="stylesheet" href="css/style1.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -33,6 +34,11 @@
   <div class="product" id="product-template" style="display: none;">
     <img class="product__img" src="" alt="">
     <h5 class="product__title"></h5>
+    <span class="fa fa-star checked"></span>
+    <span class="fa fa-star checked"></span>
+    <span class="fa fa-star checked"></span>
+    <span class="fa fa-star"></span>
+    <span class="fa fa-star"></span>
     <p class="product__description"></p>
     <button class="product___button">
       <i class="fa-solid fa-cart-shopping"></i> Zet in winkelmandje
