--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <nav class="menu header-menu">
                 <ul class="ui-menu menu-main-ul" aria-label="">
                     <li class="level0 first  level-top" style=""> <a class="level0 first level-top" href="./productenlijst.html" target="_self" role="menuitem"> <span>Koop een piano</span></a></li>
-                    <li class="level0 level-top" style=""> <a class="level0 level-top" href="./productenlijst.html" target="_self" role="menuitem"> <span>Huur & Lease </span> </a></li>
+                    <li class="level0 level-top" style=""> <a class="level0 level-top" href="./huurleaselijst.html" target="_self" role="menuitem"> <span>Huur & Lease </span> </a></li>
                     <li class="level0 level-top" style=""><a class="level0 level-top" href="" role="menuitem"> <span>Leer piano spelen</span></a></li>
                     <li class="level0 level-top" style=""><a class="level0 level-top" href=""> <span>Ontdek de piano</span></a></li>
                     <li class="level0 last level-top" style=""><a class="level0 level-top" href="" target="_self" role="menuitem"> <span>Contact & Service</span></a></li>
