--- a/leerpianospelen.html
+++ b/leerpianospelen.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/style3.css">
+    <script src="js/main3.js"></script>
 </head>
 <body>
-    
+    <header class="header">
+    <img class="headerimg_1logo" src="fotos/logo.png" alt="">
+        <h1 class="text_header">Leer Piano Spelen</h1>
+   </header>
 </body>
 </html>
