--- a/leerpianospelen.html
+++ b/leerpianospelen.html
@@ -12,5 +12,34 @@
     <img class="headerimg_1logo" src="fotos/logo.png" alt="">
         <h1 class="text_header">Leer Piano Spelen</h1>
    </header>
+   <section>
+    <div>
+        <div class="row">
+  <div class="column">
+    <img src="fotos/foto24.png">
+    <img src="fotos/foto25.png">
+
+  </div>
+  <div class="column">
+    <img src="fotos/foto23.png">
+    <img src="fotos/foto27.png">
+>
+  </div>
+  <div class="column">
+    <img src="fotos/foto28.png">
+    <img src="fotos/foto29.png">
+  </div>
+
+  <div class="column">
+    <img src="fotos/foto26.png">
+    <img src="fotos/foto30.png">
+  </div>
+
+</div>
+    </div>
+    <div>
+        <h3 class="h3_tekst">Hoi</h3>
+    </div>
+   </section>
 </body>
 </html>
