--- a/leerpianospelen.html
+++ b/leerpianospelen.html
@@ -22,7 +22,7 @@
   </div>
   <div class="column">
     <img src="fotos/foto23.png">
-    <img src="fotos/foto27.png">
+    <img src="fotos/foto27.png.jpg">
 >
   </div>
   <div class="column">
@@ -38,7 +38,7 @@
 </div>
     </div>
     <div>
-        <h3 class="h3_tekst">Hoi</h3>
+        <h2 class="h2_tekst">Hoi</h2>
     </div>
    </section>
 </body>
