--- a/huurleaselijst.html
+++ b/huurleaselijst.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/style2.css">
     <script src="js/main2.js" defer></script>
+      <link rel="icon" type="image/x-icon" href="/fotos/logo.png">
     
 
 </head>
@@ -68,14 +69,13 @@
         <h3 class="text_lease">Liever niet in één keer een groot bedrag uitgeven aan een piano? Geen probleem!
 Met onze lease-optie speel je direct op een mooie, kwalitatieve piano voor een vast maandbedrag. Superhandig als je flexibel wilt blijven of eerst eens rustig wilt ontdekken of piano spelen echt bij je past.</h3>
     </div>
-   
-   </section>
+    </section>
+
+
    <div>
     <h2 class="text_h2">Meest Gestelde Vragen</h2>
 
-
-
-
+    
 <button type="button" class="collapsible">Welke piano krijg ik?</button>
 <div class="content">
   <p>
