--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="js/main.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
+  <link rel="icon" type="image/x-icon" href="/fotos/logo.png">
 </head>
 <body>
     <header class="header">
@@ -37,8 +37,8 @@
                     <li class="level0 first  level-top" style=""> <a class="level0 first level-top" href="./productenlijst.html" target="_self" role="menuitem"> <span>Koop een piano</span></a></li>
                     <li class="level0 level-top" style=""> <a class="level0 level-top" href="./huurleaselijst.html" target="_self" role="menuitem"> <span>Huur & Lease </span> </a></li>
                     <li class="level0 level-top" style=""><a class="level0 level-top" href="./leerpianospelen.html" role="menuitem"> <span>Leer piano spelen</span></a></li>
-                    <li class="level0 level-top" style=""><a class="level0 level-top" href=""> <span>Ontdek de piano</span></a></li>
-                    <li class="level0 last level-top" style=""><a class="level0 level-top" href="" target="_self" role="menuitem"> <span>Contact & Service</span></a></li>
+                    <li class="level0 level-top" style=""><a class="level0 level-top" href="./ondekdepiano.html"> <span>Ontdek de piano</span></a></li>
+                    <li class="level0 last level-top" style=""><a class="level0 level-top" href="./contactenservices.html" target="_self" role="menuitem"> <span>Contact & Service</span></a></li>
    
           </ul>
          </nav>
@@ -164,7 +164,7 @@
                         <div class="footer__top__block">
                             <h3>Showrooms</h3>
                             <nav class="menu footer-showrooms-menu" data-action="navigation">
-                                <ul class="ui-menu menu-main-ul" aria-label="Showrooms">
+                                <ul class="ui-menu menu-main-ul" aria-label="Showrooms">       
                                     <li class="level0 first level-top"><a class="level0 first level-top" href="" target="_self" role="menuitem"></a><span>Maastricht</span></li>
                                     <li class="level0 level-top"><a class="level0 level-top" href="" target="_self" role="menuitem"></a><span>Amsterdam</span></li>
                                     <li class="level0 level-top"><a class="level0 level-top" href="" target="_self" role="menuitem"></a><span>Utrecht</span></li>
