--- a/leerpianospelen.html
+++ b/leerpianospelen.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/style3.css">
-    <script src="js/main3.js"></script>
+      <link rel="icon" type="image/x-icon" href="/fotos/logo.png">
+
 </head>
 <body>
     <header class="header">
@@ -22,12 +23,12 @@
   </div>
   <div class="column">
     <img src="fotos/foto23.png">
-    <img src="fotos/foto27.png.jpg">
+    <img src="fotos/foto27.jpg">
 >
   </div>
   <div class="column">
     <img src="fotos/foto28.png">
-    <img src="fotos/foto29.png">
+    <img src="fotos/foto29.jpg">
   </div>
 
   <div class="column">
@@ -38,8 +39,59 @@
 </div>
     </div>
     <div>
-        <h2 class="h2_tekst">Hoi</h2>
+<section class="info">
+        <div class="huren">
+            <h2 class="titel_huren">Pianoles</h2>
+            <h3 class="text_huren"> Wil jij de sterren van de hemel spelen op de piano? 🎹 Overweeg je te starten met pianoles of wil je pianoles voor je kind aanvragen? Onze pianolessen zijn afgestemd op alle leeftijden en niveaus.
+              Of je nu jazz, pop of klassiek wil leren, bij de Pianoles Amsterdam helpen wij je niet alleen om je favoriete liedjes te leren spelen maar ook de theorie achter deze liedjes. Waarom werkt een liedje zo goed? Samen met jouw docent analyseer je hoe deze liedjes in elkaar zitten. Of je nu bij het begin moet beginnen of dat je jouw talent wilt perfectioneren.
+            </h3> 
     </div>
    </section>
+     </div>
+  </section>
+
+
+
+
+      <div>
+    <h2 class="text_h2">Meest Gestelde Vragen</h2>
+
+    
+<button type="button" class="collapsible">Welke Soorten Piano's zijn er en Welke is het Beste voor Beginners?</button>
+<div class="content">
+  <p>
+Moderne digitale piano's
+In deze categorie vind je de artikelen over digitale piano's. Van beginner tot professionele modellen passeren hier de revue. Laat je meenemen in de geweldige wereld van Digitale Piano's. Bekende merken zijn..
+bieden een klank en speelgevoel die dicht bij die van een akoestische piano komen. Dit is dan ook de meest gekozen piano voor beginners
+Als beginner is het soms lastig in te schatten welk soort piano of digitale piano de beste keuze voor je is. Start je met een échte beginnerspiano, of is een digitale piano de beste keuze. Daarnaast is er nog..
+.</p>
+</div>
+<button type="button" class="collapsible">Hoe Lang Duurt het om Piano te Leren Spelen?</button>
+<div class="content">
+  <p>Basisniveau: Met regelmatige oefening (ongeveer 30 minuten per dag) kunnen de meeste beginners binnen 3 tot 6 maanden eenvoudige liedjes spelen en noten lezen.
+
+Gemiddeld Niveau: Om een gemiddeld niveau te bereiken, waarbij je meer complexe stukken kunt spelen en een goed begrip hebt van muziek theorie, kun je rekenen op 1 tot 3 jaar van consistente oefening.
+
+Gevorderd Niveau: Om een gevorderd niveau te bereiken, waarbij je complexe klassieke stukken en uitdagende moderne muziek kunt spelen, kan het 5 tot 10 jaar of langer duren van toegewijde studie en oefening.</p>
+</div>
+<button type="button" class="collapsible">Hoeveel moet ik per dag Oefenen om Vooruitgang te Boeken?</button>
+<div class="content">
+  <p>Met een kwartiertje per dag oefenen zou je al redelijk wat vooruitgang kunnen boeken, maar laten we eerlijk zijn.
+     Wanneer jij plaats neemt achter de piano, de vingers opwarmt en de juiste oefeningen opzoekt ben je meestal al 10 minuten verder en heb je eigenlijk nog niets geleerd. Dus wil je sneller progressie maken is het zaak om die tijd wat te verlengen.
+     Zelf vind ik hier een half uur per dag een mooie tijd voor. 
+     Zo heb je voldoende tijd om je vingers op te warmen, je oefeningen te doen en ook nog eens even lekker vrij te spelen.</p>
+</div>
+<button type="button" class="collapsible">Wat is de Beste Leeftijd om te Beginnen met Pianolessen?</button>
+<div class="content">
+  <p>De beste leeftijd om te beginnen met pianolessen
+Wil je graag piano leren spelen , maar weet je niet waar te beginnen? Zoek dan niet verder! Op deze pagina ontdek je alles over Piano Leren spelen met Cor Bakker, de bekende Nederlandse Pianist bekend van radio en TV...
+varieert, maar over het algemeen wordt gezegd dat kinderen vanaf ongeveer 6 jaar oud klaar zijn om piano te leren spelen. Dit komt omdat ze op deze leeftijd meestal de nodige motorische vaardigheden en aandachtsspanne hebben ontwikkeld. Echter, er is geen maximale leeftijd om te beginnen; volwassenen kunnen ook met succes piano leren spelen. 
+Het belangrijkste is motivatie en regelmatige oefening. Wees dus niet bang dat je te oud bent om piano te leren spelen want dat is dus niet zo.</p>
+</div>
+    <script src="js/main3.js"></script>
+
+   </div>
+
+ 
 </body>
 </html>
