LE POISONNN STEVEEE LL EST ORANGE

--- a/contactenservices.html
+++ b/contactenservices.html
@@ -12,6 +12,63 @@
     <img class="headerimg_1logo" src="fotos/logo.png" alt="">
         <h1 class="text_header">Contact & Service</h1>
    </header>
+   <main>
+    <div class="huren">
+            <h2 class="titel_huren"> Wij zijn er voor u! </h2>
+            <h3 class="text_huren"> Het huren of kopen van een piano is vaak geen duidelijke beslissing.
+                 Ons team van pianoconsultants helpt u graag met advies en hulp. Ook voor algemene vragen kunt u hier contact met ons opnemen!
+                 Ons algemene nummer: 020 688 1444.
+            </h3> 
+            <nav>
+                <ul class="allebei_vragen">
+                    <li class="vragen_contact"><a  href="" target="_self" role="menuitem"></a> U kunt ook ons algemene nummer bellen.</li>
+                     <li class="vragen_contact"><a  href="" target="_self" role="menuitem"></a>Neem dan contact met ons op via onderstaand formulier!</li>
+                </ul>
+            </nav>
+    </div>
 
+     <div class="container">
+  <form action="action_page.php">
+
+    <label for="fname">Voornaam</label>
+    <input type="text" id="fname" name="firstname" placeholder="Je Voornaam">
+
+    <label for="lname">Achternaam</label>
+    <input type="text" id="lname" name="lastname" placeholder="Je Achternaam">
+
+      <label for="lname">Telefoonnummer</label>
+    <input type="text" id="lname" name="lastname" placeholder="Je Telefoonnummer">
+
+
+    <label for="country">Land</label>
+    <select id="country" name="country">
+      <option value="australia">Australia</option>
+      <option value="usa">België</option>
+      <option value="canada">Canada</option>
+      <option value="usa">Deneamrken</option>
+       <option value="usa">Duitsland</option>
+       <option value="usa">Frankrijk</option>
+       <option value="usa">Italië </option>
+       <option value="usa">Nederland</option>
+        <option value="usa">Noorwegen</option>
+        <option value="usa">Polen</option>
+         <option value="usa">Spanje</option>
+          <option value="usa">Tsjechië</option>
+      <option value="usa">USA</option>
+        <option value="usa">United Kingdom</option>
+       <option value="usa">Zweden</option>
+        
+
+    </select>
+
+    <label for="subject">Onderwerp</label>
+    <textarea id="subject" name="subject" placeholder="Schrijf Iets.." style="height:200px"></textarea>
+
+    <input type="submit" value="Verzend">
+
+  </form>
+</div> 
+
+   </main>
 </body>
 </html>
