--- a/productenlijst.html
+++ b/productenlijst.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="css/style1.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="icon" type="image/x-icon" href="/fotos/logo.png">
 </head>
 
 <body>
@@ -16,9 +17,12 @@
    </header>
   <div class="cart-icon">
     <i class="fa-solid fa-cart-shopping"></i>
-    <span id="cartcount" class="cart-count">0</span>
-   
+    <span button="click" id="cartcount" class="cart-count">0</span>
+ 
+
   </div>
+
+  
   <nav>
     <ul>
       <li>
