--- a/contactenservices.html
+++ b/contactenservices.html
@@ -28,7 +28,7 @@
     </div>
 
      <div class="container">
-  <form action="action_page.php">
+  <form action="">
 
     <label for="fname">Voornaam</label>
     <input type="text" id="fname" name="firstname" placeholder="Je Voornaam">
