--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="header">
 
          <img class="headerimg_1logo" src="fotos/logo.png" alt="">
-            <form class="example" action="/action_page.php" style="max-width:30rem">
+            <form class="example" action="" style="max-width:30rem">
             <input type="text" placeholder="Search.." name="search2">
             <button type="submit"><i class="fa fa-search"></i></button>
            </form>
