--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="js/main.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="icon" type="image/x-icon" href="/fotos/logo.png">
+  <link rel="icon" type="image/x-icon" href="/fotos/logo.png ">
 </head>
 <body>
     <header class="header">
@@ -153,7 +153,13 @@
              <button type="submit" class="ad_knop">Enter</button></div>
            <img class="actio_piano" src="fotos/actie_piano.jpg" alt="">
                
-</div></div>
+</div>
+
+<div>
+
+</div>
+
+</div>
      </section>
 
      <footer class="page-footer">
