--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="js/main.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="icon" type="image/x-icon" href="/fotos/logo.png ">
+  <link rel="icon" type="image/x-icon" href="fotos/logo2link2.png">
 </head>
 <body>
     <header class="header">
