--- a/contactenservices.html
+++ b/contactenservices.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/style5.css">
-     <link rel="icon" type="image/x-icon" href="/fotos/logo.png">
+  <link rel="icon" type="image/x-icon" href="fotos/logo2link2.png">
 </head>
 <body>
    <header class="header">
