--- a/huurleaselijst.html
+++ b/huurleaselijst.html
@@ -6,8 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/style2.css">
     <script src="js/main2.js" defer></script>
-      <link rel="icon" type="image/x-icon" href="/fotos/logo.png">
-    
+  <link rel="icon" type="image/x-icon" href="fotos/logo2link2.png">    
 
 </head>
 <body>
