--- a/productenlijst.html
+++ b/productenlijst.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="css/style1.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="icon" type="image/x-icon" href="/fotos/logo.png">
+  <link rel="icon" type="image/x-icon" href="fotos/logo2link2.png">
 </head>
 
 <body>
