lleeeee poissoonnnnnn steve

--- a/productenlijst.html
+++ b/productenlijst.html
@@ -43,7 +43,11 @@
     <span class="fa fa-star checked"></span>
     <span class="fa fa-star"></span>
     <span class="fa fa-star"></span>
-    <p class="product__description"></p>
+      
+   <p class="product__description">
+  <span class="short-text"></span><span class="dots">...</span><span class="more-text" style="display:none;"></span>
+</p>
+<button class="read-more-btn">Lees meer..</button>
     <button class="product___button">
       <i class="fa-solid fa-cart-shopping"></i> Zet in winkelmandje
     </button>
