--- a/productenlijst.html
+++ b/productenlijst.html
@@ -38,6 +38,7 @@
   <div class="product" id="product-template" style="display: none;">
     <img class="product__img" src="" alt="">
     <h5 class="product__title"></h5>
+    <p class="product__price"></p>
     <span class="fa fa-star checked"></span>
     <span class="fa fa-star checked"></span>
     <span class="fa fa-star checked"></span>
