--- a/contactenservices.html
+++ b/contactenservices.html
@@ -28,7 +28,8 @@
     </div>
 
      <div class="container">
-  <form action="">
+ <form action="mailto:n.eroglux014@gmail.com" method="POST" enctype="text/plain">
+      <h1>Contact-Formulier</h1>
 
     <label for="fname">Voornaam</label>
     <input type="text" id="fname" name="firstname" placeholder="Je Voornaam">
