--- a/productenlijst.html
+++ b/productenlijst.html
@@ -16,9 +16,10 @@
     <h1 class="text_header">Piano's Te Koop</h1>
    </header>
   <div class="cart-icon">
+    <a href="winkelmandoverzicht.html" class="cart-icon">
     <i class="fa-solid fa-cart-shopping"></i>
     <span button="click" id="cartcount" class="cart-count">0</span>
- 
+    </a>
 
   </div>
 
