--- a/huurleaselijst.html
+++ b/huurleaselijst.html
@@ -12,7 +12,7 @@
 <body>
     
    <header class="header">
-    <img class="headerimg_1logo" src="fotos/logo.png" alt="">
+    <a href="index.html"><img class="headerimg_1logo" src="fotos/logo.png" alt=""></a>
     <h1 class="text_header">Huur & Lease</h1>
    </header>
    <main>
