--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <body>
     <header class="header">
 
-        <img class="headerimg_1logo" src="fotos/logo.png" alt="">
-        <form class="example" action="" style="max-width:30rem">
+        <a href="./index.html"><img class="headerimg_1logo" src="fotos/logo.png" alt="">
+        <form class="example" action="" style="max-width:30rem"></a>
             <input type="text" placeholder="Search.." name="search2">
             <button type="submit"><i class="fa fa-search"></i></button>
         </form>
