--- a/leerpianospelen.html
+++ b/leerpianospelen.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="header">
-    <img class="headerimg_1logo" src="fotos/logo.png" alt="">
+    <a href="index.html"><img class="headerimg_1logo" src="fotos/logo.png" alt=""></a>
         <h1 class="text_header">Leer Piano Spelen</h1>
    </header>
    <section>
