--- a/productenlijst.html
+++ b/productenlijst.html
@@ -8,11 +8,13 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="icon" type="image/x-icon" href="fotos/logo2link2.png">
+  <script src="js/main1.js" defer></script>
 </head>
 
 <body>
    <header class="header">
-    <img class="headerimg_1logo" src="fotos/logo.png" alt="">
+
+    <a href="index.html"><img class="headerimg_1logo" src="fotos/logo.png" alt=""></a>
     <h1 class="text_header">Piano's Te Koop</h1>
    </header>
   <div class="cart-icon">
@@ -55,9 +57,7 @@
     </button>
   </div>
 </div>
-<div>
-  <script src="js/main1.js" ></script>
-</div>
+
 
 
       </li>
