--- a/ondekdepiano.html
+++ b/ondekdepiano.html
@@ -9,7 +9,7 @@
 </head>
 <body>
    <header class="header">
-    <img class="headerimg_1logo" src="fotos/logo.png" alt="">
+    <a href="index.html"><img class="headerimg_1logo" src="fotos/logo.png" alt=""></a>
         <h1 class="text_header">Ontdek De Piano</h1>
    </header>
 
