--- a/winkelmandoverzicht.html
+++ b/winkelmandoverzicht.html
@@ -8,16 +8,20 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="icon" type="image/x-icon" href="fotos/logo2link2.png">
+  <script src="js/mainwinkelmandoverzicht.js"></script>
 </head>
 
 <body>
    <header class="header">
-    <img class="headerimg_1logo" src="fotos/logo.png" alt="">
+     <a href="index.html"><img class="headerimg_1logo" src="fotos/logo.png" alt=""></a>
     <h1 class="text_header">Piano's Te Koop</h1>
-   </header>
   <div class="cart-icon">
     <i class="fa-solid fa-cart-shopping"></i>
     <span button="click" id="cartcount" class="cart-count">0</span>
- 
+    </header>
+
+    <main>
+
+    </main>
 
   </div>
