--- a/winkelmandoverzicht.html
+++ b/winkelmandoverzicht.html
@@ -4,24 +4,27 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="css/style1.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="icon" type="image/x-icon" href="fotos/logo2link2.png">
-  <script src="js/mainwinkelmandoverzicht.js"></script>
+    <link rel="stylesheet" href="css/style6.css">
+  <script src="js/mainwinkelmandoverzicht.js" defer></script>
+  
 </head>
 
 <body>
-   <header class="header">
-     <a href="index.html"><img class="headerimg_1logo" src="fotos/logo.png" alt=""></a>
-    <h1 class="text_header">Piano's Te Koop</h1>
+<header class="header">
+  <a href="index.html"><img class="headerimg_1logo" src="fotos/logo.png" alt=""></a>
+  <h1 class="text_header">Piano's Te Koop</h1>
   <div class="cart-icon">
     <i class="fa-solid fa-cart-shopping"></i>
-    <span button="click" id="cartcount" class="cart-count">0</span>
-    </header>
+    <span id="cartcount" class="cart-count">0</span>
+  </div>
+</header>
 
-    <main>
 
-    </main>
+   <main class="lekker_stylen_winkellijst">
+
+   </main>
 
   </div>
