yaaayy eindelijk klaar!!!

--- a/winkelmandoverzicht.html
+++ b/winkelmandoverzicht.html
@@ -23,8 +23,8 @@
 </header>
 
 
-   <main class="lekker_stylen_winkellijst">
-
+   <main> 
+   <div class="lekker_stylen_winkellijst" ></div>
    </main>
 
   </div>
