--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initi\-scale=1.0">
-    <title>Document</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Kwalitatieve Piano’s Kopen bij MOJO</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="js/main.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="icon" type="image/x-icon" href="fotos/logo2link2.png">
+      <meta name="description" content="Ontdek kwalitatieve piano's van MOJO!">
 </head>
 
 <body>
@@ -66,7 +67,7 @@
 
 
 
-
+<h1>Kwalitatieve Piano’s van MOJO, Voor Beginners en Professionals</h1>
 
         <main id="maincontent" class="page-main">
             <a id="contentarea" tabindex="-1"></a>
